--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ag-charts-enterprise": "^11.1.1",
     "ag-charts-react": "^11.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
